Wed Dec 24 02:54:06 2008  Minero Aoki  <aamine@loveruby.net>

	* import/setjmp.hb: new file to support setjmp.

	* test: test setjmp.

Mon Dec 15 00:05:16 2008  Minero Aoki  <aamine@loveruby.net>

	* introduce virtual stack again, for only local variables and tmp
	  variables.  Function arguments use true push & pop.

	* --verbose-asm prints stack frame layout in detail.

Sun Dec 14 21:04:56 2008  Minero Aoki  <aamine@loveruby.net>

	* test: test alloca more.

Sun Dec 14 20:43:47 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java
	  (compileFunctionBody): remove bp from saveRegs first.

Mon Dec  8 00:55:33 2008  Minero Aoki  <aamine@loveruby.net>

	* lib/alloca.s: alloca() implemeted.

	* lib/Makefile: build it.

	* import/alloca.hb: declare alloca.

Sun Dec  7 23:26:50 2008  Minero Aoki  <aamine@loveruby.net>

	* net: revert r4100; implementing alloca() is too difficult for
	  current architecture.

Sun Dec  7 23:25:25 2008  Minero Aoki  <aamine@loveruby.net>

	* lib/libcbc.cb -> lib/stdarg.cb

	* lib/Makefile: ditto.

Sun Dec  7 22:27:51 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: manage stack
	  offset by generator, instead of using machine push/pop.

	* net/loveruby/cflat/asm/Assembler.java: new method
	  relocatableMov.

	* net/loveruby/cflat/asm/Assembly.java: allow fixing indirect
	  memory access offset.

	* net/loveruby/cflat/asm/Instruction.java: ditto.

	* net/loveruby/cflat/asm/AsmOperand.java: ditto.

	* net/loveruby/cflat/asm/IndirectMemoryReference.java: ditto.

	* net/loveruby/cflat/asm/IntegerLiteral.java: ditto.

	* net/loveruby/cflat/asm/Literal.java: ditto.

	* net/loveruby/cflat/asm/BaseSymbol.java: ditto.

	* net/loveruby/cflat/asm/SuffixedSymbol.java: ditto.

Sun Dec  7 17:13:45 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/LocalReferenceResolver.java ->
	  LocalResolver.java
