@@ -1,3 +1,9 @@
+Wed Dec 24 03:43:14 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* lib/sizeof_jmpbuf.c: new analysis program.
+
+	* lib/Makefile: add a rule to build sizeof_jmpbuf.
+
 Wed Dec 24 02:54:06 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* import/setjmp.hb: new file to support setjmp.
